# Library

./: ALPHASPARSEWIKI.md  CMakeLists.txt  Makefile
arm/: CMakeLists.txt  config.h.in
arm/format/: CMakeLists.txt  alphasparse_convert_bsr.cpp  alphasparse_convert_csc.cpp  alphasparse_convert_csr.cpp  alphasparse_convert_dia.cpp  alphasparse_convert_ell.cpp  alphasparse_convert_sky.cpp  alphasparse_create_csc.cpp  alphasparse_create_csr.cpp  alphasparse_export_bsr.cpp  alphasparse_export_coo.cpp  alphasparse_export_csc.cpp  alphasparse_export_csr.cpp  alphasparse_export_ell.cpp  alphasparse_transpose.cpp  convert_bsr_coo.hpp  convert_csc_coo.hpp  convert_csc_csr.hpp  convert_csr_coo.hpp  convert_dia_coo.hpp  convert_ell_coo.hpp  convert_sky_coo.hpp  create_csc.hpp  create_csr.hpp  destroy_bsr.hpp  destroy_coo.hpp  destroy_csc.hpp  destroy_csr.hpp  destroy_dia.hpp  destroy_sky.hpp  transpose_bsr.hpp  transpose_conj_bsr.hpp  transpose_conj_coo.hpp  transpose_conj_csc.hpp  transpose_conj_csr.hpp  transpose_conj_dia.hpp  transpose_coo.hpp  transpose_csc.hpp  transpose_csr.hpp  transpose_dia.hpp  (+1 more)
arm/kernel/: CMakeLists.txt
arm/kernel/level1/: alphasparse_axpy.cpp  alphasparse_dotci_sub.cpp  alphasparse_doti.cpp  alphasparse_dotui_sub.cpp  alphasparse_gthr.cpp  alphasparse_gthrz.cpp  alphasparse_rot.cpp  alphasparse_sctr.cpp  axpy.hpp  dotci_sub.hpp  doti.hpp  dotui_sub.hpp  gthr.hpp  gthrz.hpp  rot.hpp  sctr.hpp
arm/kernel/level2/: alphasparse_mv.cpp  alphasparse_trsv.cpp
arm/kernel/level2/trsv/: diagsv_bsr.hpp  diagsv_coo.hpp  diagsv_csc.hpp  diagsv_csr.hpp  diagsv_dia.hpp  diagsv_sky.hpp  spsv.h  trsv_bsr.hpp  trsv_bsr_conj.hpp  trsv_bsr_trans.hpp  trsv_coo.hpp  trsv_coo_conj.hpp  trsv_coo_trans.hpp  trsv_csc.hpp  trsv_csc_conj.hpp  trsv_csc_trans.hpp  trsv_csr.hpp  trsv_csr_conj.hpp  trsv_csr_trans.hpp  trsv_dia.hpp  trsv_dia_conj.hpp  trsv_dia_trans.hpp  trsv_sky.hpp  trsv_sky_conj.hpp  trsv_sky_trans.hpp
arm/kernel/level3/: alphasparse_add.cpp  alphasparse_mm.cpp  alphasparse_set_value.cpp  alphasparse_spmm.cpp  alphasparse_spmmd.cpp  alphasparse_trsm.cpp
arm/kernel/level3/add/: add_csr.hpp  add_csr_conj.hpp  add_csr_trans.hpp
arm/kernel/level3/set/: set_value_bsr.hpp  set_value_coo.hpp  set_value_csc.hpp  (+1 more)
arm/test/: CMakeLists.txt  args.cpp  io.cpp  test_common.cpp
arm/test/include/: args.h  test_common.h
arm/test/level2/: mv_hygon_test.cpp  sv_csr_s_hygon_test.cpp  sv_hygon_test.cpp
arm/test/level3/: add_s_csr_x86_64_test.cpp  mm_hygon_test.cpp  set_s_csr_x86_64_test.cpp  spmm_csc_c_hygon_test.cpp  spmm_csc_d_hygon_test.cpp  spmm_csc_s_hygon_test.cpp  spmm_csc_z_hygon_test.cpp  spmm_csr_c_hygon_test.cpp  spmm_csr_d_hygon_test.cpp  spmm_csr_z_hygon_test.cpp  spmm_hygon_test.cpp  spmmd_hygon_test.cpp  trsm_c_hygon_test.cpp  trsm_csr_s_hygon_test.cpp  trsm_d_hygon_test.cpp  trsm_hygon_test.cpp
arm/util/: internal_check.cpp  pack.cpp  partition.cpp  prefix_sum.cpp  vec_dot.hpp
hip/: CMakeLists.txt
hip/kernel/: CMakeLists.txt  some_common.h
hip/kernel/level1/: alphasparse_axpby.hip  alphasparse_gather.hip  alphasparse_rot.hip  alphasparse_scatter.hip  alphasparse_spvv.hip
hip/kernel/level2/: alphasparse_spmv.hip  alphasparse_spmv_csr_adaptive2.h  alphasparse_spmv_csr_adaptive3.h  alphasparse_spmv_csr_flat.h  alphasparse_spmv_csr_line_enhance.h  alphasparse_spmv_csr_row_partition_ginkgo.h  alphasparse_spsv.hip  spsv_csr_n_lo_nnz_balance.h  spsv_csr_n_lo_tri_cublk.h
hip/kernel/level3/: alphasparse_spgemm.hip  alphasparse_spgemm_copy_csr.h  alphasparse_spgemm_csr.h  alphasparse_spgemm_nnz_csr.h  alphasparse_spgemm_reuse.hip  alphasparse_spgemm_speck_csr.h  alphasparse_spmm.hip  alphasparse_spmm_bell.h  alphasparse_spmm_coo_col.h  alphasparse_spmm_csc.h  alphasparse_spmm_csr_adaptive.h  alphasparse_spmm_csr_col.h  alphasparse_spmm_csr_flat.h  alphasparse_spmm_csr_merge.h  alphasparse_spmm_csr_nnz_split.h  alphasparse_spmm_csr_row.h  alphasparse_spmm_csr_row_split.h  alphasparse_spmm_tc4csr.h  alphasparse_spmm_utils.h  bitonic.h  csrspgemm_device_speck.h  hip_npp.h
hip/test/: CMakeLists.txt  args.hip  check_r.hip  io.hip  test_common.h  test_spmm.sh  test_spsv.sh  warmup.hip
hip/test/include/: args.h  check.h  common.h  io.h  warmup.h
hip/test/level2/: spmv_csr_r_f32_test.hip  spmv_csr_r_f64_test.hip  spsv_coo_r_f32_test_metrics.hip  spsv_coo_r_f64_test_metrics.hip  spsv_csr_r_f32_test_metrics.hip  spsv_csr_r_f64_test_metrics.hip
hip/test/level3/: spgemm_csr_r_f32_test.hip  spmm_csc_col_c_f16_f16_test.hip  spmm_csc_col_c_f32_test.hip  spmm_csc_col_c_f64_test.hip  spmm_csc_col_r_f16_f16_test.hip  spmm_csc_col_r_f16_f32_test.hip  spmm_csc_col_r_f32_test.hip  spmm_csc_col_r_f32_test_alpha_metrics.hip  spmm_csc_col_r_f32_test_hip_metrics.hip  spmm_csc_col_r_f64_test.hip  spmm_csc_col_r_i8_f32_test.hip  spmm_csc_col_r_i8_i32_test.hip  spmm_csc_row_r_f32_test.hip  spmm_csc_row_r_f32_test_alpha_metrics.hip  spmm_csc_row_r_f32_test_cu_metrics.hip  spmm_csr_col_c_f16_f16_test.hip  spmm_csr_col_c_f32_test.hip  spmm_csr_col_c_f32_test_alpha_metrics.hip  spmm_csr_col_c_f32_test_hip_metrics.hip  spmm_csr_col_c_f64_test.hip  spmm_csr_col_c_f64_test_alpha_metrics.hip  spmm_csr_col_c_f64_test_cu_metrics.hip  spmm_csr_col_r_f16_f16_test.hip  spmm_csr_col_r_f16_f32_test.hip  spmm_csr_col_r_f32_test.hip  spmm_csr_col_r_f32_test_alpha_metrics.hip  spmm_csr_col_r_f32_test_cu_metrics.hip  spmm_csr_col_r_f64_test.hip  spmm_csr_col_r_f64_test_alpha_metrics.hip  spmm_csr_col_r_f64_test_cu_metrics.hip  spmm_csr_col_r_i8_f32_test.hip  spmm_csr_col_r_i8_i32_test.hip  spmm_csr_row_c_f32_test.hip  spmm_csr_row_c_f32_test_alpha_metrics.hip  spmm_csr_row_c_f32_test_hip_metrics.hip  spmm_csr_row_c_f64_test.hip  spmm_csr_row_c_f64_test_alpha_metrics.hip  spmm_csr_row_c_f64_test_hip_metrics.hip  spmm_csr_row_r_f32_test.hip  spmm_csr_row_r_f32_test_alpha_metrics.hip  (+5 more)
hip/util/: handle.hip  malloc.hip
hygon/: CMakeLists.txt
hygon/format/: CMakeLists.txt  alphasparse_convert_coo.cpp.bak  destroy_bsr.hpp  destroy_coo.hpp  destroy_csc.hpp  destroy_dia.hpp  destroy_sky.hpp
(+803 files in other folders)
